--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: expense, data: {controller: "form", action: "change->form#refresh"} do |form| %>
+<%= form_with model: expense do |form| %>
   <% if expense.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(expense.errors.count, "error") %> prohibited this expense from being saved:</h2>
@@ -34,6 +34,22 @@
         ["Year".pluralize(schedule.object.interval), "year"]
         ] %>
       </div>
+      <% if schedule.object.frequency == "month" %>
+        <div class="field">
+          Summary: <%= schedule.object.by_monthday.map(&:ordinalize).to_sentence %>
+        </div>
+        <div class="field">
+          <%= schedule.label :by_monthday, "Monthdays" %>
+          <div class="cluster">
+            <%= schedule.collection_check_boxes :by_monthday, (1..28).to_a + (-3..-1).to_a, :to_i, :to_i do |b| %>
+              <div class="cluster">
+                <%= b.check_box %>
+                <%= b.label %>
+              </div>
+            <% end %>
+          </div>
+        </div>
+      <% end %>
     <% else %>
       <div class="field">
         <%= schedule.label :started_at, "Date" %>
@@ -42,9 +58,6 @@
     <% end %>
   <% end %>
   <br />
-  <div>
-    <%= form.submit "refresh" %>
-  </div>
   <div>
     <%= form.submit %>
   </div>
