--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,14 +1,15 @@
-<p style="color: green"><%= notice %></p>
-
-<h1>Expenses</h1>
-
-<div id="expenses">
+<div id="expenses" class="flow">
+  <p style="color: green"><%= notice %></p>
+  <h1 class="text-center">Expenses</h1>
   <% @expenses.each do |expense| %>
-    <%= render expense %>
-    <p>
-      <%= link_to "Show this expense", expense %>
-    </p>
+    <div class="card box">
+      <%= render expense %>
+      <p>
+        <%= link_to "Show this expense", expense %>
+      </p>
+    </div>
   <% end %>
+  <div class="text-center">
+    <%= link_to "New expense", new_expense_path %>
+  </div>
 </div>
-
-<%= link_to "New expense", new_expense_path %>
