--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: expense do |form| %>
+<%= form_with model: expense, data: {controller: "form", action: "change->form#refresh"} do |form| %>
   <% if expense.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(expense.errors.count, "error") %> prohibited this expense from being saved:</h2>
@@ -58,6 +58,9 @@
     <% end %>
   <% end %>
   <br />
+  <div class="hidden">
+    <%= form.submit "refresh" %>
+  </div>
   <div>
     <%= form.submit %>
   </div>
